WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266856
REGRESSION (
271171@main
): Unable to scroll web views using pan gesture in the 喜马拉雅 app
https://bugs.webkit.org/show_bug.cgi?id=266856
Summary
REGRESSION (271171@main): Unable to scroll web views using pan gesture in the...
Wenson Hsieh
Reported
2023-12-23 11:36:21 PST
rdar://119851795
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2023-12-23 12:12:42 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22226
EWS
Comment 2
2024-01-02 10:42:41 PST
Committed
272571@main
(57c88bfd87f4): <
https://commits.webkit.org/272571@main
> Reviewed commits have been landed. Closing PR #22226 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug